zokrates_cli/examples/compile_errors/unconstrained_input.zok
def main(private field a) -> field:
    return 1